--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
 </head>
 <header>
     <div class="container">
-        <div class="header-container">
+        <div class="header-continer">
             <h3>Help   |</h3>
     </div>
-    <div class="header-container">
+    <div class="header-contaainer">
         <h3>Join Us       |</h3>
     </div>
-    <div class="header-container">
+    <div class="header-contaiiner">
         <h3>Find a Store    |</h3>
     </div>
-    <div class="header-container">
-         <h3></h3>
+
         </header>
 <body>
     <div class="menu-burger">
@@ -33,7 +32,7 @@
   </div> 
   <div class="main">
     <div class="box">
-        <div class="boxx1"><img src="img/002.jpg" alt="" style="width: 610px; height: 350px;"></div>
+        <div class="boxx1"><img src="img/002.jpg" alt="" style="width: 100%; height: 350px;"></div>
         <div class="boxx2">
             <div class="bx1">
                 <div class="b1"><img src="img/015.jpg" alt="" style="width: 100%; height: 163px;"></div>
