--- a/men.html
+++ b/men.html
@@ -33,7 +33,7 @@
   </div> 
   <div class="main">
     <div class="box">
-        <div class="boxx1"><img src="img/080.webp" alt="" style="width: 610px; height: 350px;"></div>
+        <div class="boxx1"><img src="img/080.webp" alt="" style="width: 100%; height: 350px;"></div>
         <div class="boxx2">
             <div class="bx1">
                 <div class="b1"><img src="img/084.jpg" alt="" style="width: 100%; height: 163px;"></div>
